latex2mmlc/src/snapshots/latex2mmlc__tests__textbf_with_digit_decimal.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\textbf{1234.5}"
---
<math>
    <mtext>𝟏𝟐𝟑𝟒.𝟓</mtext>
</math>
