latex2mmlc/src/snapshots/latex2mmlc__tests__textbf_with_digit_dot.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\textbf{1234.}"
---
<math>
    <mtext>𝟏𝟐𝟑𝟒.</mtext>
</math>
