latex2mmlc/src/snapshots/latex2mmlc__tests__textit.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\textit{x}"
---
<math>
    <mtext>𝑥</mtext>
</math>
