latex2mmlc/src/snapshots/latex2mmlc__tests__texttt.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\texttt{x}"
---
<math>
    <mtext>𝚡</mtext>
</math>
