latex2mmlc/src/snapshots/latex2mmlc__tests__transform_group.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathit{a{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi>𝑏𝑐</mi>
        <mi>𝑑</mi>
    </mrow>
</math>
