latex2mmlc/src/snapshots/latex2mmlc__tests__unclosed_brace.snap
---
source: latex2mmlc/src/lib.rs
expression: "{"
---
LatexError(
    1,
    UnclosedGroup(
        GroupEnd,
    ),
)
