latex2mmlc/src/snapshots/latex2mmlc__tests__unclosed_bracket.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sqrt[lim"
---
Position: 9
UnclosedGroup(
    SquareBracketClose,
)
