latex2mmlc/src/snapshots/latex2mmlc__tests__unclosed_env.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin{matrix} x"
---
Position: 16
UnclosedGroup(
    End,
)
