latex2mmlc/src/snapshots/latex2mmlc__tests__unclosed_left.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\left( x"
---
Position: 8
UnclosedGroup(
    Right,
)
