latex2mmlc/src/snapshots/latex2mmlc__tests__unclosed_text.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{hello"
---
Position: 11
UnclosedGroup(
    GroupEnd,
)
