latex2mmlc/src/snapshots/latex2mmlc__tests__underbrace.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\underbrace{a+b+c}_{d}"
---
<math>
    <munder>
        <mrow>
            <mi>a</mi>
            <mo>+</mo>
            <mi>b</mi>
            <mo>+</mo>
            <mi>c</mi>
        </mrow>
        <munder>
            <mo>⏟</mo>
            <mi>d</mi>
        </munder>
    </munder>
</math>
